--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,7 @@
             "env": {
                 "LD_LIBRARY_PATH": "$LD_LIBRARY_PATH:/home/lihan/.mujoco/mujoco200/bin"
               },
-            "justMyCode":true,
+            "justMyCode":false,
         }
     ]
 }
