--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,16 +13,16 @@
             "console": "integratedTerminal",
             "args":[   
                 // "--dataset","halfcheetah-medium-expert-v2",
-                "--dataset", "maze2d-large-v1",
+                "--dataset", "PandaStack-v3",
                 "--device", "cuda:3",
                 // "--logbase", "logs/pretrained"
-                "--config", "config.maze2d"
+                "--config", "config.panda_gym"
             ], 
             "cwd":"/home/lihan/diffuser-maze2d",
             "env": {
                 "LD_LIBRARY_PATH": "$LD_LIBRARY_PATH:/home/lihan/.mujoco/mujoco200/bin"
               },
-            "justMyCode":false,
+            "justMyCode":true,
         }
     ]
 }
