--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.exclude": {
         "**/.git": false
-    }
+    },
+    "python.analysis.extraPaths": [
+        "./diffuser/environments/panda-gym"
+    ]
 }
