--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,8 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    
+
+
 
         {
             "name": "Python",
@@ -14,10 +15,10 @@
             "console": "integratedTerminal",
             "args":[   
                 // "--dataset","halfcheetah-medium-expert-v2",
-                "--dataset", "maze2d-large-v1",
+                // "--dataset", "maze2d-large-v1",
                 "--device", "cuda:3",
                 // "--logbase", "logs/pretrained"
-                "--config", "config.maze2d_config"
+                // "--config", "config.maze2d_config"
             ], 
             "cwd":"/home/lihan/diffuser-maze2d",
             "env": {
